--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,9 @@ buildscript {
     ext.kotlin_version = '1.4.30'
     ext.compose_version = '1.0.0-beta01'
     ext.coroutines_version = '1.4.2'
+    ext.hilt_version = '2.32-alpha'
+    ext.hilt_jetpack_version = '1.0.0-alpha03'
+    ext.room_version = '2.3.0-beta02'
 
     repositories {
         google()
@@ -25,6 +28,7 @@ buildscript {
     }
 
     dependencies {
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hilt_version"
         classpath 'com.android.tools.build:gradle:7.0.0-alpha08'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     }
