--- a/app/build.gradle
+++ b/app/build.gradle
@@ -83,8 +83,9 @@ dependencies {
 
     implementation "androidx.room:room-runtime:$room_version"
     implementation "androidx.room:room-ktx:$room_version"
-
     kapt "androidx.room:room-compiler:$room_version"
+
+    implementation "androidx.navigation:navigation-compose:$navigation_compose_version"
 
     testImplementation 'junit:junit:4.13.2'
 
