--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ buildscript {
     ext.hilt_version = '2.32-alpha'
     ext.hilt_jetpack_version = '1.0.0-alpha03'
     ext.room_version = '2.3.0-beta02'
+    ext.navigation_compose_version = '1.0.0-alpha08'
 
     repositories {
         google()
