--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,10 +75,12 @@ dependencies {
     implementation "androidx.compose.material:material-icons-extended:$compose_version"
     implementation "androidx.compose.ui:ui-tooling:$compose_version"
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.0'
+    implementation "androidx.compose.runtime:runtime-livedata:$compose_version"
 
     implementation "com.google.dagger:hilt-android:$hilt_version"
     kapt "com.google.dagger:hilt-compiler:$hilt_version"
     implementation "androidx.hilt:hilt-lifecycle-viewmodel:$hilt_jetpack_version"
+    implementation "androidx.hilt:hilt-navigation:$hilt_jetpack_version"
     kapt "androidx.hilt:hilt-compiler:$hilt_jetpack_version"
 
     implementation "androidx.room:room-runtime:$room_version"
@@ -86,6 +88,8 @@ dependencies {
     kapt "androidx.room:room-compiler:$room_version"
 
     implementation "androidx.navigation:navigation-compose:$navigation_compose_version"
+
+    implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
 
     testImplementation 'junit:junit:4.13.2'
 
