--- a/app/build.gradle
+++ b/app/build.gradle
@@ -89,6 +89,8 @@ dependencies {
 
     implementation "androidx.navigation:navigation-compose:$navigation_compose_version"
 
+    implementation "dev.chrisbanes.accompanist:accompanist-coil:0.6.1"
+
     implementation "androidx.lifecycle:lifecycle-livedata-ktx:2.3.0"
 
     testImplementation 'junit:junit:4.13.2'
